--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+:root {
+  --primary: #45154B;
+  --primary-nav: #3F1140;
+  --lunar: #C8BBC8;
+  --charcoal: #353535;
+  --cloudy: #818181;
+  --sky-blue: #53A1DB;
+  --sky-tint: #0E76C4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  overflow: hidden;
+  font-family: sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h2, h3, h4, h5 { margin: 0; }
+.title { margin-bottom: 20px; }
+
+.center-display {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  width: 100%;
+  padding: 30px 20px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  border-radius: 5px;
+}
+
+.form label { margin-bottom: 10px; }
+
+.submit-btn {
+  width: 100%;
+  padding: 1.25rem 0.75rem;
+  color: #FFF;
+  border: 1px solid #2EB67D;
+  background-color: #2EB67D;
+  border-radius: 5px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 16px;
+  transition: ease-in-out 300ms;
+}
+
+.logout-btn { background-color: #B33F40; }
+.submit-btn:hover { background-color: #29A370; }
+.logout-btn:hover { background-color: #973537; }
+
+.submit-btn:hover, .logout-btn:hover { cursor: pointer; }
+
+input[type="text"].disabled {
   color: white;
+  opacity: .6;
+  cursor: no-drop;
 }
 
-.App-link {
-  color: #61dafb;
+.form-control {
+  display: block;
+  margin-bottom: 15px;
+  padding: 15px 10px;
+  border-radius: 5px;
+  border: 1px solid var(--charcoal);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-text { padding: 20px; }
+.footer-text a { text-decoration: none; }
+.footer-text a:hover { text-decoration: underline; }
+
+.alert.alert-danger {
+  color: #721C24;
+  background-color: #F8D7DA;
+  border-color: #F5C6CB;
+  border-left: 5px solid #C00;
 }
