--- a/src/components/UserCreate/UserCreate.css
+++ b/src/components/UserCreate/UserCreate.css
@@ -3,14 +3,6 @@
     text-align: center;
 }
 
-.avatar-icon {
-    max-width: 100px;
-}
-
-.avatar-border-radius {
-    border-radius: 50%;
-}
-
 .avatar-text {
     color: var(--sky-blue);
     transition: ease-in-out 200ms;
@@ -61,12 +53,12 @@
     background-color: #CCC;
 }
 
-.avatar-list .avatar-icon {
+.avatar-list .create-avatar {
     transition: ease-in-out 100ms;
     opacity: 0.8;
 }
 
-.avatar-list .avatar-icon:hover {
+.avatar-list .create-avatar:hover {
     cursor: pointer;
     opacity: 1;
 }
